--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 header {
     text-align: center;
     background-color: tomato;
     color: white
+}
+
+h1 {
+    margin: 0;
+    padding: 20px;
+}
+
+img {
+    width: 250px;
+    display: block;
+    margin: 0 auto;
 }
