--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(180, 56, 56);
 }
 
 header {
@@ -18,4 +19,15 @@ img {
     width: 250px;
     display: block;
     margin: 0 auto;
+    margin-top: 15px;
+}
+
+main, footer {
+    margin-left: 20px;
+}
+
+footer {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
